[package]
name = "walnuk"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
backon = "1.6.0"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
const_format = "0.2.35"
envconfig = "0.11.1"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
scylla = { version = "1.4.1", features = ["chrono-04", "rustls-023"] }
serde = "1.0.228"
serde_json = "1.0.145"
sqids = "0.4.2"
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43", features = ["valuable"] }
tracing-subscriber = { version = "0.3.22", features = [
    "json",
    "chrono",
    "valuable",
] }
url = "2.5.7"
valuable = { version = "0.1.1", features = ["derive"] }
